bot: Add VM options on container