@@ -64,5 +64,12 @@ jib {
 
     container {
         mainClass = "dev.freya02.doxxy.bot.Main"
+        jvmFlags = listOf(
+            "--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        )
     }
 }
